src/pages/Home/Home.scss
@import "../../styles/style.scss";

.container {
  @include flex-container($direction: column, $align: center);
  width: 100%;
  height: 100%;
  padding: 1rem;
  gap: 1rem;
  @include md-screen {
    @include flex-container(
      $direction: row,
      $justify: space-between,
      $wrap: wrap
    );
    padding: 2rem;
  }
  @include lg-screen {
    padding: 5rem;
  }
}

.cards_container {
  @include flex-container($direction: column, $align: center);
  width: 100%;
  height: 100%;
  gap: 1rem;
  @include md-screen {
    @include flex-container(
      $direction: row,
      $justify: space-between,
      $wrap: wrap
    );
    border-radius: $border-radius-md;
    background-color: $neutral-medium-color;
    padding: 2rem;
    gap: 2rem;
  }
}

.card-container {
  width: 100%;
  max-width: 450px;
  height: 225px;
  @include md-screen {
    width: calc(50% - 2rem);
  }
  @include lg-screen {
    width: calc(33% - 2rem);
  }
}

